# Aprendiendo-ESP_IDF

./: README.md
01_Hola_Mundo/main/: main.c
02_Codigo_Archivos/: .gitignore  CMakeLists.txt  README.md
02_Codigo_Archivos/main/: CMakeLists.txt  un_led.h
02_Varios_Archivos_Secuencia/: .gitignore  README.md
02_Varios_Archivos_Secuencia/main/: main.c  un_led.c  varios_led.c  varios_led.h
03_FreeRTOS_Poliritmia/: CMakeLists.txt  README.md
03_FreeRTOS_Poliritmia/main/: main.c
04_Varios_cores/: CMakeLists.txt  README.md
04_Varios_cores/main/: CMakeLists.txt  boton.c  boton.h  contador.c  contador.h  main.c  parpadeo.c  parpadeo.h
05_WIFI/: CMakeLists.txt  README.md
05_WIFI/main/: CMakeLists.txt  configuracion_wifi.c  configuracion_wifi.h  luces.c  luces.h  main.c
06_WIFI_AP+STA/: CMakeLists.txt  README.md
06_WIFI_AP+STA/main/: CMakeLists.txt  main.c  wifi_ap.c  wifi_ap.h  wifi_sta.c  wifi_sta.h
07_Servidor_Http/: CMakeLists.txt  README.md
07_Servidor_Http/main/: CMakeLists.txt  configuracion.h  index.html  main.c
07_Servidor_Http/main/Autenticacion/: auth.c  auth.h
07_Servidor_Http/main/Configuracion_wifi/: wifi_manager.c  wifi_manager.h
07_Servidor_Http/main/Control_pines/: gpio_control.c  gpio_control.h
07_Servidor_Http/main/Server_http/: web_server.c  web_server.h
Prueba_1/: README.md
Prueba_1/main/: main.c
